--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/AlexKolomiytsev/a-greed/issues"
   },
-  "homepage": "https://github.com/AlexKolomiytsev/a-greed#readme"
+  "homepage": "https://github.com/AlexKolomiytsev/a-greed#readme",
+  "dependencies": {
+    "live-server": "^1.1.0"
+  }
 }
