--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/AlexKolomiytsev/a-greed#readme",
   "dependencies": {
-    "live-server": "^1.1.0",
+    "del": "^2.2.2",
     "gulp": "^4.0.0-alpha.2",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-browserify": "^0.5.1",
@@ -28,6 +28,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "jquery": "^3.1.0",
+    "live-server": "^1.1.0",
+    "reset-css": "^2.0.20160720",
     "stringify": "^5.1.0"
   }
 }
